--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEBSTUDIO</title>
     <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <link rel="stylesheet" href="css/styles.css" />
@@ -20,6 +21,9 @@
     <!-- Logo -->
     <div class="webstudio">
     <a href="index.html" class="header-link"><span class="logo">WEB</span>STUDIO</a>
+    <a href="/" class="menu-button"><svg class="menu-icon" width="32px" height="22px">
+        <use xlink:href="./images/icons.svg#icon-menu-icon"></use>
+    </svg></a>
     </div>
     <ul class="navigation">
     <li class="item"><a href="index.html" class="menu-studio active">Studio</a>
@@ -92,24 +96,32 @@
 <section="section-one">
     <ul class="section-one-items">
     <li class="strategy">
+    <div class="section-one-icon-bg">
     <img src="./images/Strategy-icon.svg" class="strategy-icon svg" alt="strategy">
+    </div>
     <h3>Strategy</h3>
-    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+    <p>Our goal is to identify the business<br>problem to walk away with the<br>perfect and creative solution.</p>
     </li>        
     <li class="punctuality">
+    <div class="section-one-icon-bg">
     <img src="./images/Punctuality-icon.svg" class="punctuality-icon svg" alt="punctuality">
+    </div>
     <h3>Punctuality</h3>
-    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+    <p>Bring the key message to the brand's<br>audience for the best price within the<br>shortest possible time.</p>
     </li>    
     <li class="diligence">
+    <div class="section-one-icon-bg">
     <img src="./images/Diligence-icon.svg" class="diligence-icon svg" alt="diligence">
+    </div>
     <h3>Diligence</h3>
-    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+    <p>Research and confirm brands that<br>present the strongest digital growth<br>opportunities and minimize risk.</p>
     </li>   
     <li class="technologies">
+    <div class="section-one-icon-bg">
     <img src="./images/Technologies-icon.svg" class="technologies-icon svg" alt="technologies">
+    </div>
     <h3>Technologies</h3>
-    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+    <p>Design practice focused on digital<br>experiences. We bring forth a deep<br>passion for problem-solving.</p>
     </li>
     </ul>
 </section>
@@ -262,10 +274,9 @@
 
 <!--Footer-->
 <footer>
-<div>
-    <a href="/" class="web-logo">WEB<span class="studio-logo">STUDIO</span></a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-</div>
+<div class="footer-container">
+<div class="footer-inner">
+    <p><a href="/" class="web-logo">WEB<span class="studio-logo">STUDIO</span></a><br>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 <div class="footer-social-media">
     <p id="social-media-title">Social Media</p>
     <ul class="socmed-icons-footer">
@@ -277,15 +288,25 @@
 </div>
 <div class="form-footer">
     <p class="footer-form-title">Subscribe</p>
-    <form action="/submit" method="post">
-        <input type="email" id="email" placeholder="Email" class="footer-email-field" name="email" required>
-        <button type="submit" class="subscribe-form-button">Subscribe<svg class="icon-icon-send">
-            <use xlink:href="./images/icons.svg#icon-icon-send"></use>
-        </svg></button>
+    <form class="subscribe-footer-form" action="/submit" method="post">
+        <input type="email" placeholder="Email" class="footer-email-field" name="email" required>
+        <button class="subscribe-btn">
+            Subscribe
+            <svg width="24" height="24" class="icon-icon-send">
+            <use href="./images/icons.svg#icon-icon-send"></use>
+        </svg>
+        </button>
+        </div>
     </form>
 </div>
-
+</div>
+</div>
+</div>
 </footer>
 <script src="./js/modal.js"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+    integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+    crossorigin="anonymous"></script>
+<script defer src="js/mobile-menu.js"></script>
 </body>
 </html>
